2014-12-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Use @samp in menu blurb.

	* doc/guile-pg.texi (Top): ...here, for "Miscellaneous".

2014-12-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Add basic type-FOO procs.

	* doc/ref.texh (Consulting Existing Converters): Add intro
	blurb and @tsin for ‘type-registered?’, ‘type-stringifier’,
	‘type-objectifier’, ‘type-default’; add @heading "obsolete
	interface" and blurb prior to previous contents.

2014-12-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Say simply "converter" instead of "type converter".

	The excruciatingly correct term would be "type-parameterized
	converter", but that's even worse.  We could also call it an
	"omm object", but that's weird, too.

	* doc/guile-pg.texi (converter): Omit "type" from expansion text.
	(Quick Start): Say "Scheme object" instead of "type".
	* doc/ref.texh (Octet Molding/Mashing): Update menu entries
	to say "Converters" instead of "Type Converters".
	(Consulting Existing Converters): Rename from
	"Consulting Existing Type Converters"; update text.
	(Builtin Converters): Update @cindex entry and text.
	(Defining New Converters): Rename from "Defining
	New Type Converters"; update @cindex entry.

2014-12-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Merge converters table into selected notes.

	* doc/ref.texh (Octet Molding/Mashing): Rename menu entry
	from "Selected Notes About Some Types" to "Builtin Converters".
	(Consulting Existing Type Converters):
	Move tables and associated blurbs from here...
	(Builtin Converters): ...to here, the node/section
	renamed from "Selected Notes About Some Types".

2014-12-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Fix bug: Use ‘@vindex’ for type converters.

	Regression introduced in Guile-PG 0.45 w/ switch to Texinfo 5.0.
	Using ‘@cindex @code{...}’ loses if makeinfo indexes the result
	of ‘@code{...}’, i.e., w/ quotes, instead of the ‘...’ only.

	* doc/guile-pg.texi (converter): ...here, in this macro.
