@@ -1,5 +1,12 @@
 2014-12-31  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[omm] Add (database postgres-types) proc: type-sql-name
+
+	* doc/ref.texh (Consulting Existing Converters):
+	Add @tsin for ‘type-sql-name’.
+
+2014-12-31  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[doc] Use @samp in menu blurb.
 
 	* doc/guile-pg.texi (Top): ...here, for "Miscellaneous".
